hphp/hack/test/typecheck/lambda/curried.php.like_types.exp
File "curried.php", line 18, characters 22-51:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "curried.php", line 19, characters 30-59:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "curried.php", line 19, characters 30-59:
Invalid argument (Typing[4110])
File "curried.php", line 11, characters 18-35:
Expected ~(function([unresolved]): [unresolved]) because it is an unenforceable type
File "curried.php", line 19, characters 37-59:
But got (function(string $s): bool)
